- Added "International mode". A.k.a. Google-Voice friendly mode. In this mode,   all numbers will be formatted with the international format instead of the   local calling format. - Some small cleanups here and there.

--- a/RightNumber/res/values-pt-rBR/strings.xml
+++ b/RightNumber/res/values-pt-rBR/strings.xml
@@ -37,4 +37,7 @@
   <string name="international_carrier_summary">Seleciona a operadora que será usada para DDI.</string>
   <string name="default_carrier">Padrão</string>
   <string name="invalid_number">Número inválido para região. Usando sem modificação.</string>
+<string name="international_mode">Modo internacional</string>
+<string name="enable_international_mode_summary_on">Formatar números usando modo internacional.</string>
+<string name="enable_international_mode_summary_off">Formatar números usando modo local.</string>
 </resources>
