Several changes and fixes:
- Added mode for running with a priority 0 receiver. This makes it work on
  Motorola phones.
- Due to the above, create 2 broadcast receivers and decide which one to use
  during runtime.
- Implemented fix for playing nice with other BroadcastReceivers that process
  numbers as we do by first trying to get the phone number from getResultData().
- Added a custom Preference that shows the icon and version of the program.
- Clicking on the above preference will open the future page with instructions.
- Added copyright headers in all java files.

--- a/RightNumber/res/values-pt-rBR/strings.xml
+++ b/RightNumber/res/values-pt-rBR/strings.xml
@@ -40,4 +40,7 @@
 <string name="international_mode">Modo internacional</string>
 <string name="enable_international_mode_summary_on">Formatar números usando modo internacional.</string>
 <string name="enable_international_mode_summary_off">Formatar números usando modo local.</string>
+<string name="use_priority_0_receiver">Executar no final</string>
+<string name="use_priority_0_receiver_summary_on">Tenta ser o último a processar o número.</string>
+<string name="use_priority_0_receiver_summary_off">O número será processado antes do passo final (modo preferido).</string>
 </resources>
